deps/v8/test/message/fail/modules-cycle2.out
*%(basename)s:7: SyntaxError: Detected cycle while resolving name 'a' in 'modules-skip-cycle2.js'
import {a} from "modules-skip-cycle2.js";
        ^
SyntaxError: Detected cycle while resolving name 'a' in 'modules-skip-cycle2.js'

